; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_mali_fbdev_ctx.c_gfx_ctx_mali_fbdev_destroy.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_mali_fbdev_ctx.c_gfx_ctx_mali_fbdev_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [9 x i8] c"/dev/tty\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@VT_ACTIVATE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"setterm -cursor on\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @gfx_ctx_mali_fbdev_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gfx_ctx_mali_fbdev_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = icmp ne %struct.TYPE_3__* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 0, i32* %11, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = call i32 @free(%struct.TYPE_3__* %12)
  br label %14

14:                                               ; preds = %9, %1
  %15 = load i32, i32* @O_RDWR, align 4
  %16 = call i32 @open(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %15)
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @VT_ACTIVATE, align 4
  %19 = call i32 @ioctl(i32 %17, i32 %18, i32 5)
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* @VT_ACTIVATE, align 4
  %22 = call i32 @ioctl(i32 %20, i32 %21, i32 1)
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @close(i32 %23)
  %25 = call i32 @system(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @free(%struct.TYPE_3__*) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @ioctl(i32, i32, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @system(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
